# LearnPython

./: a1.py  pyproject.toml
trade/: demo.xlsx  get_daily_basic_info_from_base.py  get_daily_data_from_xlsx.py  s2.py  ~$600519.xlsx
trade/data/: 600519s.xlsx
web_automation/: s1.py
第4章 Python对象类型/: a1.py  a2.py
